Fixing bug 180285 (hang in mail compose), regression from bug 124990. Don't throw an exception if dispatchEvent is called on an element that's not in a document. r=saari, sr=jst.